[gd_scene load_steps=6 format=2]

[ext_resource path="res://styles/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/game_wait.gd" type="Script" id=2]
[ext_resource path="res://styles/header_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://styles/button_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://styles/button_pressed.tres" type="StyleBox" id=5]

[node name="game_wait" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
expand = true
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="HBoxHeader" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 252.0
margin_right = 1280.0
margin_bottom = 366.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxHeader"]
margin_left = 164.0
margin_right = 1116.0
margin_bottom = 114.0
custom_fonts/font = ExtResource( 3 )
text = "GAME_WAIT_HEADER"
align = 1

[node name="HBoxOpponentInfo" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 370.0
margin_right = 1280.0
margin_bottom = 420.0
alignment = 1

[node name="OpponentLabel" type="Label" parent="VBoxContainer/HBoxOpponentInfo"]
margin_left = 53.0
margin_right = 423.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 50 )
text = "GAME_WAIT_OPPONENT"
align = 1
valign = 1

[node name="OpponentInfoLabel" type="Label" parent="VBoxContainer/HBoxOpponentInfo"]
margin_left = 427.0
margin_right = 677.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 50 )
align = 1
valign = 1

[node name="OpponentReadyLabel" type="Label" parent="VBoxContainer/HBoxOpponentInfo"]
margin_left = 681.0
margin_right = 1227.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 50 )
text = "GAME_WAIT_NOT_READY_MESSAGE"
align = 1
valign = 1

[node name="HBoxMessage" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 424.0
margin_right = 1280.0
margin_bottom = 474.0
alignment = 1

[node name="MessageLabel" type="Label" parent="VBoxContainer/HBoxMessage"]
margin_left = 473.0
margin_right = 806.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
text = "GAME_WAIT_WAITING"
align = 1
valign = 1

[node name="HBoxActions" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 478.0
margin_right = 1280.0
margin_bottom = 548.0
rect_min_size = Vector2( 100, 70 )
alignment = 1

[node name="Invite" type="Button" parent="VBoxContainer/HBoxActions"]
margin_left = 21.0
margin_top = 10.0
margin_right = 334.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 50 )
size_flags_vertical = 4
text = "GAME_WAIT_INVITE"

[node name="Start" type="Button" parent="VBoxContainer/HBoxActions"]
margin_left = 338.0
margin_top = 10.0
margin_right = 651.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 50 )
size_flags_vertical = 4
disabled = true
text = "GAME_WAIT_START"

[node name="Ready" type="Button" parent="VBoxContainer/HBoxActions"]
margin_left = 655.0
margin_top = 10.0
margin_right = 960.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 50 )
size_flags_vertical = 4
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
toggle_mode = true
text = "GAME_WAIT_READY"

[node name="Back" type="Button" parent="VBoxContainer/HBoxActions"]
margin_left = 964.0
margin_top = 10.0
margin_right = 1259.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 50 )
size_flags_vertical = 4
text = "GAME_WAIT_BACK"

[node name="StartTimer" type="Timer" parent="."]
[connection signal="pressed" from="VBoxContainer/HBoxActions/Invite" to="." method="_on_Invite_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxActions/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxActions/Ready" to="." method="_on_Ready_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxActions/Back" to="." method="_on_Back_pressed"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
